metadata-sfdx/force-app/main/default/objects/SCConfigExperience__c/SCConfigExperience__c.object-meta.xml
<CustomObject>
    <label>SC Config: Experience</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SC Experiences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>