metadata-sfdx/force-app/main/default/objects/SCConfigExperience__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration</label>
    <referenceTo>SCConfigSetting__c</referenceTo>
    <relationshipName>SolutionCenterExperiences</relationshipName>
    <type>Lookup</type>
</CustomField>