metadata-sfdx/force-app/main/default/objects/SCConfigExperience__c/fields/ExperienceAudience__c.field-meta.xml
<CustomField>
    <fullName>ExperienceAudience__c</fullName>
    <label>Experience Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>