metadata-sfdx/force-app/main/default/objects/SCConfigExperience__c/fields/SuggestedDocumentation__c.field-meta.xml
<CustomField>
    <fullName>SuggestedDocumentation__c</fullName>
    <label>Suggested Documentation</label>
    <type>TextArea</type>
</CustomField>