metadata-sfdx/force-app/main/default/objects/SCConfigExperience__c/recordTypes/SolutionCenterExperience.recordType-meta.xml
<RecordType>
    <fullName>SolutionCenterExperience</fullName>
    <active>true</active>
    <description>Record type used to manage the Solution Center experiences.</description>
    <label>Solution Center Experience</label>
</RecordType>